; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_lp.c_bwn_phy_lp_rf_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_lp.c_bwn_phy_lp_rf_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { i32 }

@.str = private unnamed_addr constant [25 x i8] c"unaccessible register %d\00", align 1
@BWN_RFCTL = common dso_local global i32 0, align 4
@BWN_RFDATALO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bwn_phy_lp_rf_write(%struct.bwn_mac* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bwn_mac*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bwn_mac* %0, %struct.bwn_mac** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 1
  %9 = zext i1 %8 to i32
  %10 = load i32, i32* %5, align 4
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i8*
  %13 = call i32 @KASSERT(i32 %9, i8* %12)
  %14 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %15 = load i32, i32* @BWN_RFCTL, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @BWN_WRITE_2(%struct.bwn_mac* %14, i32 %15, i32 %16)
  %18 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %19 = load i32, i32* @BWN_RFDATALO, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @BWN_WRITE_2(%struct.bwn_mac* %18, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @KASSERT(i32, i8*) #1

declare dso_local i32 @BWN_WRITE_2(%struct.bwn_mac*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
